# microbesGYM

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
modelTemplates/: activated_sludge.json  anaerobic_digestor.json  bh_bt_ri_complete_model_export.json  bioanode.json  ecoli_overflow_simple.json  kombucha.json  kombucha_refined.json
notebooks/: compare_control_policies.ipynb  controller_simulation_demo.ipynb  kinetic_model.ipynb  kinetic_model_.ipynb  pip_install.ipynb  test_install.ipynb
src/kinetic_model/: __init__.py  _version.py  bacteria.py  cli.py  environment.py  feeding_term.py  metabolite.py  metabolome.py  microbiome.py  model_from_json.py  ph.py  reactor.py  stirring.py  subpopulation.py  temperature.py  utils.py  visualize.py
src/mg_api/: __init__.py  main.py  schemas.py  store.py
src/mg_api/routers/: __init__.py  bacteria.py  environments.py  metabolites.py  metabolomes.py  microbiomes.py  ph_drafts.py  ph_functions.py  presets.py  pulses.py  simulations.py  timelines.py  viz.py
src/rl/: __init__.py  config.py  env.py  env.py.bak  model_adapter.py  selectors.py  wrappers.py
src/rl/actions/: schema.py
src/rl/cli/: evaluate.py  plot_general_controller.py  train_agent.py
src/rl/docs/: DOCUMENTATION.md  README.md  general_RL_short_tutorial.md
src/rl/examples/configs/: acetate_control.yaml  bt_control.yaml  butyrate_control.yaml  kombucha_control.yaml  ri_control.yaml  succinate_control.yaml
src/rl/observation/: builder.py  expr.py
src/rl/rewards/: engine.py
ui/: index.html  package-lock.json  package.json  tsconfig.json
ui/scripts/: dev-full.cjs
ui/src/: App.tsx  main.tsx  styles.css
ui/src/components/: ApiStatus.tsx  BuildCanvas.tsx  Header.tsx  PulseTimeline.tsx  Tabs.tsx
ui/src/lib/: api.ts  bacteria.ts  env.ts  metabolites.ts  metabolomes.ts  microbiomes.ts  ph.ts  ph_drafts.ts  plotly.ts  pulses.ts  simulations.ts  timelines.ts  viz.ts
ui/src/pages/: Build.tsx  Plots.tsx  Policies.tsx  Simulation.tsx  Training.tsx
ui/src/pages/build_tab/inspectors/: BacteriaInspector.tsx  index.ts  (+5 more)
(+4 files in other folders)
