[build-system]
requires = [
    "setuptools>=68",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "microbesGYM"
description = "Kinetic modeling and reinforcement learning for microbial community dynamics"
requires-python = ">=3.9"
authors = [
    { name = "Daniel Rios Garza", email = "daniel.rios.garza@example.com" }
]
readme = "README.md"
license = { text = "MIT" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy>=1.21",
    "scipy>=1.8",
    "plotly>=5.0",
    "gymnasium>=0.29",
    "stable-baselines3>=2.0",
    "pyyaml>=6.0",
    "matplotlib>=3.5",
    "pandas>=1.4",
    "pydantic>=2.0",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "flake8>=5.0",
    "mypy>=1.0",
]
extras = [
    "pyabc>=0.12",
    "ipycytoscape>=0.2",
    "torchdiffeq>=0.2",
    "tensorboard>=2.20.0",
    "tqdm>=4.67.1",
    "rich"
]
all = [
    # dev
    "pytest>=7.0",
    "black>=22.0",
    "flake8>=5.0",
    "mypy>=1.0",
    # extras
    "pyabc>=0.12",
    "ipycytoscape>=0.2",
    "torchdiffeq>=0.2",
    "tensorboard>=2.20.0",
    "tqdm>=4.67.1",
    "rich"
]

[project.scripts]
kinetic-model = "kinetic_model.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["kinetic_model*", "rl*"]

[tool.setuptools.package-data]
kinetic_model = ["py.typed"]
rl = ["examples/configs/*.yaml", "docs/*.md"]

[tool.setuptools.dynamic]
version = { file = "src/kinetic_model/_version.py" }


